--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <!-- Primera etiqueta linkeando JavaScript -->
+    <script defer src="/assets/js/script.js"></script>
+    <!-- Cierre de linkeo de JavaScript -->
+    <title>Primera entrega - Joaquin Morassut</title>
 </head>
 <body>
+    <h1>Primera entrega - Joaquin Morassut</h1>
     
 </body>
 </html>
