--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <!-- Primera etiqueta linkeando JavaScript -->
     <script defer src="/assets/js/script.js"></script>
     <!-- Cierre de linkeo de JavaScript -->
-    <title>Primera entrega - Joaquin Morassut</title>
+    <title>Pre entrega 1 - Joaquin Morassut</title>
 </head>
 
 <body>
-    <h1>Primera entrega - Joaquin Morassut</h1>
+    <h1>Pre entrega 1 - Joaquin Morassut</h1>
 
 </body>
 
