--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Primera etiqueta linkeando JavaScript -->
     <script defer src="/assets/js/script.js"></script>
     <!-- Cierre de linkeo de JavaScript -->
-    <title>Pre entrega 2 - Joaquin Morassut</title>
+    <title>Proyecto final - Joaquin Morassut</title>
 </head>
 
 <body>
